# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  chip8-emulator.cpp  chip8-emulator.h  chip8-emulator.sln  chip8-emulator.vcxproj  chip8-emulator.vcxproj.filters
src/: chip8-emulator.cpp  cpu.cpp  cpu.h
